# Rendering

./: CMakeLists.txt  Camera3D.cpp  Camera3D.h  Interaction.cpp  Interaction.h  Light.cpp  Light.h  Model.cpp  Model.h  MyMesh.h  README.md  Shader.cpp  Shader.h  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h  main.cpp
GLSL/: render.fs  render.vs
